--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,12 @@
 @tailwind utilities;
 @layer base {
   :root {
-    --radius: 0.5rem}
+    --radius: 0.5rem;
+  }
+
+  html,
+  body,
+  #root {
+    height: 100%;
+  }
 }
